...
            onClick = { navController.navigate("Login") },
            colors = ButtonDefaults.buttonColors(containerColor = accentColor, contentColor = Color.Black),
            shape = RoundedCornerShape(50),
            modifier = Modifier
                .align(Alignment.TopEnd)
                .padding(top = 60.dp, end = 15.dp)
                .testTag("mainLoginButton") //tag for espresso ui test.
        ) {
            Text(text = stringResource(id = R.string.Login))
        }

        // Main content column
        Column(
...
